Fix ellipsis when song titles are too long

--- a/src/styles/6-components/music/_components.song.scss
+++ b/src/styles/6-components/music/_components.song.scss
@@ -24,6 +24,8 @@
       flex-direction: column;
     margin-left: $spacing-medium;
     text-align: left;
+    overflow: hidden;
+    width: 100%;
   }
   
   &__title {
